Fix CardIcon alignment

--- a/hsreplaynet/static/styles/components.scss
+++ b/hsreplaynet/static/styles/components.scss
@@ -163,15 +163,10 @@
 								filter: grayscale(100%);
 							}
 
-							>div {
-								margin-top: 15px;
-								float: left;
-							}
-					
 							.card-icon {
-								margin-left: 7px;
-								margin-right: 3px;
+								float: left;
 								line-height: 50px;
+								margin: 15px 3px 0 7px;
 							}
 						}
 
